--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
     - pip install coveralls
 
 script:
-    - nosetests --with-coverage --cover-package=cloudshell.networking.cisco tests
+    - nosetests --with-coverage --cover-package=cloudshell.networking.alcatel tests
 
 after_success:
     - coveralls
