--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,12 @@
 repos:
-  - repo: https://github.com/python/black
-    rev: 19.3b0
+#  - repo: https://github.com/python/black
+#    rev: stable
+#    hooks:
+#    - id: black
+#      language_version: python3.6
+  - repo: https://gitlab.com/pycqa/flake8
+    rev: 3.7.7
     hooks:
-    - id: black
-      language_version: python3.7
+      - id: flake8
+        additional_dependencies: [flake8-docstrings]
+        language_version: python3.7
