--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,9 @@
 repos:
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.20
-    hooks:
-      - id: isort
-        language_version: python3.7
+#  - repo: https://github.com/pre-commit/mirrors-isort
+#    rev: v4.3.20
+#    hooks:
+#      - id: isort
+#        language_version: python3.7
   - repo: https://github.com/python/black
     rev: stable
     hooks:
