--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,5 +13,6 @@ repos:
     rev: 3.7.7
     hooks:
       - id: flake8
+        args: ['--config=tox.ini']
 #        additional_dependencies: [flake8-docstrings]
         language_version: python3.7
