move flake8 config to the separate file

--- a/tox.ini
+++ b/tox.ini
@@ -28,10 +28,7 @@ commands =
     nosetests tests
     python setup.py sdist --format zip
 
-[flake8]
-max-line-length = 88
-ignore = D100,D101,D102,D103,D104,D105,D107,D401  # we don't need have docstrings in every func, class and package
-
 [isort]
 line_length = 88
 forced_separate = cloudshell.networking.alcatel
+multi_line_output=3
