--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
     hooks:
       - id: black
         language_version: python3.7
+        exclude: 'mibs'
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.7.7
     hooks:
