--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,12 +4,11 @@ repos:
 #    hooks:
 #      - id: isort
 #        language_version: python3.7
-  - repo: https://github.com/python/black
-    rev: stable
-    hooks:
-      - id: black
-        language_version: python3.7
-        exclude: 'mibs'
+#  - repo: https://github.com/python/black
+#    rev: stable
+#    hooks:
+#      - id: black
+#        language_version: python3.7
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.7.7
     hooks:
