--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,19 @@ commands =
     nosetests tests
     python setup.py sdist --format zip
 
+[testenv:py27-flake8]
+skip_install = true
+deps = flake8
+commands = flake8 cloudshell
+
 [isort]
 line_length = 88
 forced_separate = cloudshell.networking.alcatel
 multi_line_output=3
+
+[flake8]
+max-line-length = 88
+;we don't need have docstrings in every func, class and package
+;and W503 is not PEP 8 compliant
+ignore = D100,D101,D102,D103,D104,D105,D107,D401,W503
+exclude = mibs
