--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,4 +15,4 @@ repos:
       - id: flake8
 #        additional_dependencies: [flake8-docstrings]
         language_version: python3.7
-        args: ['--exclude=mibs']
+        exclude: '^mibs&'
