--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,11 +4,12 @@ repos:
 #    hooks:
 #      - id: isort
 #        language_version: python3.7
-#  - repo: https://github.com/python/black
-#    rev: stable
-#    hooks:
-#      - id: black
-#        language_version: python3.7
+  - repo: https://github.com/python/black
+    rev: stable
+    hooks:
+      - id: black
+        language_version: python3.7
+        exclude: '\mibs'
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.7.7
     hooks:
