--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,6 @@ repos:
     rev: 3.7.7
     hooks:
       - id: flake8
-#        additional_dependencies: [flake8-docstrings]
+        additional_dependencies: [flake8-docstrings]
         language_version: python3.7
         exclude: '\mibs'
