--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ distshare = dist
 deps =
     -r test_requirements.txt
 commands =
-    nosetests tests
+    nosetests --with-coverage --cover-package=cloudshell.networking.alcatel tests
 
 [testenv:pre-commit]
 skip_install = true
@@ -25,7 +25,7 @@ deps =
     -r dev_requirements.txt
     -r test_requirements.txt
 commands =
-    nosetests tests
+    nosetests --with-coverage --cover-package=cloudshell.networking.alcatel tests
     python setup.py sdist --format zip
 
 [isort]
