--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
 python: "2.7"
-install: pip install tox-travis
+install:
+  - pip install tox
+  - pip install codecov
 script: tox
 after_success: codecov
