--- a/tox.ini
+++ b/tox.ini
@@ -5,10 +5,10 @@
 
 [tox]
 ;todo different envs in master and dev branches
-envlist = py27, pre-commit
+envlist = master, pre-commit
 distshare = dist
 
-[testenv]
+[testenv:master]
 deps =
     -r test_requirements.txt
 commands =
@@ -19,7 +19,7 @@ skip_install = true
 deps = pre-commit
 commands = pre-commit run --all-files --show-diff-on-failure
 
-[testenv:py27-dev]
+[testenv:dev]
 usedevelop = true
 deps =
     -r dev_requirements.txt
