--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,14 @@ language: python
 
 jobs:
   include:
-    - env: TOXENV=master
+    - if: branch = master
+      env: TOXENV=master
       python: 2.7
       after_success: codecov
+    - if: branch != master
+        env: TOXENV=dev
+        python: 2.7
+        after_success: codecov
     - env: TOXENV=pre-commit
       python: 3.7
       dist: xenial
