isort skip mibs

--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,7 @@ commands =
 line_length = 88
 forced_separate = cloudshell.networking.alcatel
 multi_line_output=3
+skip = mibs
 
 [flake8]
 max-line-length = 88
