--- a/tox.ini
+++ b/tox.ini
@@ -2,17 +2,20 @@
 # in multiple virtualenvs. This configuration file will run the
 # test suite on all supported python versions. To use it, "pip install tox"
 # and then run "tox" from this directory.
+[DEFAULT]
+package-name = cloudshell.networking.alcatel
 
 [tox]
 ;todo different envs in master and dev branches
 envlist = master, pre-commit
 distshare = dist
+basepython=py27
 
 [testenv:master]
 deps =
     -r test_requirements.txt
 commands =
-    nosetests --with-coverage --cover-package=cloudshell.networking.alcatel tests
+    nosetests --with-coverage --cover-package={[DEFAULT]package-name} tests
 
 [testenv:pre-commit]
 skip_install = true
@@ -25,12 +28,12 @@ deps =
     -r dev_requirements.txt
     -r test_requirements.txt
 commands =
-    nosetests --with-coverage --cover-package=cloudshell.networking.alcatel tests
+    nosetests --with-coverage --cover-package={[DEFAULT]package-name} tests
     python setup.py sdist --format zip
 
 [isort]
 line_length = 88
-forced_separate = cloudshell.networking.alcatel
+forced_separate = %(package-name)s
 multi_line_output=3
 skip = mibs
 
