add to isort forced separate tests

--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,7 @@ commands =
 
 [isort]
 line_length = 88
-forced_separate = %(package-name)s
+forced_separate = %(package-name)s,tests
 multi_line_output=3
 skip = mibs
 
