--- a/tox.ini
+++ b/tox.ini
@@ -43,3 +43,8 @@ max-line-length = 88
 ;and W503 is not PEP 8 compliant
 ignore = D100,D101,D102,D103,D104,D105,D107,D401,W503
 exclude = mibs
+
+[coverage:report]
+omit =
+    */mibs/*
+    *__init__*
