--- a/tox.ini
+++ b/tox.ini
@@ -44,7 +44,7 @@ max-line-length = 88
 ignore = D100,D101,D102,D103,D104,D105,D107,D401,W503
 exclude = mibs
 
-[coverage:report]
+[coverage:run]
 omit =
     */mibs/*
     *__init__*
