--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,8 @@ repos:
     hooks:
       - id: flake8
         additional_dependencies: [
+          # todo remove this after fixing flake8-docstring
+          'pydocstyle<4.0.0',
           flake8-docstrings,
           flake8-builtins,
           flake8-comprehensions,
