--- a/tox.ini
+++ b/tox.ini
@@ -4,32 +4,33 @@
 # and then run "tox" from this directory.
 [DEFAULT]
 package-name = cloudshell.networking.alcatel
+python_version = python2.7
 
 [tox]
-;todo different envs in master and dev branches
 envlist = master, pre-commit
 distshare = dist
-basepython=py27
 
 [testenv:master]
+basepython = {[DEFAULT]python_version}
 deps =
     -r test_requirements.txt
 commands =
     nosetests --with-coverage --cover-package={[DEFAULT]package-name} tests
 
+[testenv:dev]
+basepython = {[DEFAULT]python_version}
+skip_install = true
+deps =
+    -r dev_requirements.txt
+    {[testenv:master]deps}
+commands =
+    {[testenv:master]commands}
+
 [testenv:pre-commit]
+basepython = python3
 skip_install = true
 deps = pre-commit
 commands = pre-commit run --all-files --show-diff-on-failure
-
-[testenv:dev]
-usedevelop = true
-deps =
-    -r dev_requirements.txt
-    -r test_requirements.txt
-commands =
-    nosetests --with-coverage --cover-package={[DEFAULT]package-name} tests
-    python setup.py sdist --format zip
 
 [isort]
 line_length = 88
