--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ package-name = cloudshell.networking.alcatel
 python_version = python2.7
 
 [tox]
-envlist = master, pre-commit
+envlist = master, pre-commit, build
 distshare = dist
 
 [testenv:master]
@@ -25,6 +25,12 @@ deps =
     {[testenv:master]deps}
 commands =
     {[testenv:master]commands}
+
+[testenv:build]
+basepython = {[DEFAULT]python_version}
+skip_install = true
+commands =
+    python setup.py sdist --format zip
 
 [testenv:pre-commit]
 basepython = python3
