--- a/tox.ini
+++ b/tox.ini
@@ -7,36 +7,30 @@ package-name = cloudshell.networking.alcatel
 python_version = python2.7
 
 [tox]
-envlist = master, pre-commit, build
+envlist =
+    py27-{master,dev}
+    pre-commit
+    build
 distshare = dist
 
-[testenv:master]
-basepython = {[DEFAULT]python_version}
+[testenv]
+skip_install:
+    dev: true
 deps =
-    -r test_requirements.txt
+    dev,master: -r test_requirements.txt
+    dev: -r dev_requirements.txt
 commands =
     nosetests --with-coverage --cover-package={[DEFAULT]package-name} tests
-
-[testenv:dev]
-basepython = {[DEFAULT]python_version}
-skip_install = true
-deps =
-    -r dev_requirements.txt
-    {[testenv:master]deps}
-commands =
-    {[testenv:master]commands}
-
-[testenv:build]
-basepython = {[DEFAULT]python_version}
-skip_install = true
-commands =
-    python setup.py sdist --format zip
 
 [testenv:pre-commit]
 basepython = python3
 skip_install = true
 deps = pre-commit
 commands = pre-commit run --all-files --show-diff-on-failure
+
+[testenv:build]
+skip_install = true
+commands = python setup.py sdist --format zip
 
 [isort]
 line_length = 88
