--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ jobs:
       dist: xenial
 
 install:
-  - pip install tox-travis, tox-factor
+  - pip install tox-travis tox-factor
   - pip install codecov
 
 script: tox
