--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ distshare = dist
 skip_install:
     dev: true
 deps =
-    dev,master: -r test_requirements.txt
+    master: -r test_requirements.txt
     dev: -r dev_requirements.txt
 commands =
     nosetests --with-coverage --cover-package={[DEFAULT]package-name} tests
