test travis and tox with multiple envs

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ package-name = cloudshell.networking.alcatel
 
 [tox]
 envlist =
-    py27-{master,dev}
+    py{27,36}-{master,dev}
     pre-commit
     build
 distshare = dist
