--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 language: python
 
+python:
+  - "2.7"
+  - "3.6"
+
+if: branch = master
+  env: TOXFACTOR = master
+else:
+  env: TOXFACTOR = dev
+
 jobs:
   include:
-    - if: branch = master
-      env: TOXFACTOR=master
-      python: 2.7
-      after_success: codecov
-    - if: branch != master
-      env: TOXFACTOR=dev
-      python: 2.7
-      after_success: codecov
     - env: TOXENV=build
       python: 2.7
     - env: TOXENV=pre-commit
@@ -21,3 +22,4 @@ install:
   - pip install codecov
 
 script: tox
+after_success: codecov
