--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,15 @@ python:
   - "2.7"
   - "3.6"
 
-if: branch = master
-  env: TOXFACTOR = master
-else:
-  env: TOXFACTOR = dev
-
 jobs:
   include:
-    - env: TOXENV=build
+    - if: branch = master
+      env: TOXFACTOR = master
+    - if: branch != master
+      env: TOXFACTOR = dev
+    - env: TOXENV = build
       python: 2.7
-    - env: TOXENV=pre-commit
+    - env: TOXENV = pre-commit
       python: 3.7
       dist: xenial
 
