--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,15 @@ language: python
 
 python:
   - 2.7
-  - 3.6
+  - 3.7
 
-jobs:
+matrix:
   include:
     - if: branch = master
       env: TOXFACTOR=master
-      python:
-        - 2.7
-        - 3.6
       after_success: codecov
     - if: branch != master
       env: TOXFACTOR=dev
-      python:
-        - 2.7
-        - 3.6
       after_success: codecov
     - env: TOXENV=build
       python: 2.7
